@@ -1,3 +1,6 @@
+* Wed Apr 19 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.1-0
+- Updated logrotate to use new lastaction API
+
 * Mon Jan 23 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
 - Calls to rsyslog::rule no longer contain logic
 - Rsync source updated to new location
